--- a/Exten_ship white/home_white.html
+++ b/Exten_ship white/home_white.html
@@ -235,7 +235,7 @@
     <br>
     <br>
     <a href="../java script samples/index.js" type="button" download="Java_script"  class="btn btn-outline-primary btn-lg bolder">Download</a>
-    <a href="../java script samples/index.html" type="button" download="Java_script"  class="btn btn-outline-primary btn-lg bolder">Take a view in browser</a>
+    <a href="../java script samples/index.html" type="button" class="btn btn-outline-primary btn-lg bolder">Take a view in browser</a>
   </p>
 
 </div>
