--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
                     <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="navbarDarkDropdownMenuLink">
                       <li><a class="dropdown-item have-more" href="index.html">Home</a></li>
                       <li><a class="dropdown-item have-more" href="safe-key.html">Safe key</a></li>
-                      <li><a class="dropdown-item have-more" href="https://onedrive.live.com/?id=root&cid=AB3B730DDA89DC97">Downloads</a></li>
+                      <li><a class="dropdown-item have-more" href="https://onedrive.live.com/?id=root&cid=AB3B730DDA89DC97" target="_blank">Downloads</a></li>
                     </ul>
                   </li>
                 </ul>
@@ -160,7 +160,7 @@
             
 
               <div class="link-beginner">
-                <a href="java script samples/index.html">Sample Js</a>
+                <a href="java script samples/index.html" target="_blank">Sample Js</a>
                 <a href="safe-key.html">Safety measures</a>
               </div>
 
@@ -240,7 +240,7 @@
             <br>
             <br>
             <a href="java script samples/index.js" type="button" download="Java_script"  class="btn btn-outline-primary btn-lg bolder">Download</a>
-            <a href="java script samples/index.html" type="button" class="btn btn-outline-primary btn-lg bolder">Take a view in browser</a>
+            <a href="java script samples/index.html" type="button" class="btn btn-outline-primary btn-lg bolder" target="_blank">Take a view in browser</a>
           </p>
        
         </div>
