--- a/Exten_ship white/home_white.html
+++ b/Exten_ship white/home_white.html
@@ -141,7 +141,7 @@
                     <ul class="dropdown-menu dropdown-menu-light" aria-labelledby="navbarDarkDropdownMenuLink">
                       <li><a class="dropdown-item have-more" href="home_white.html">Home</a></li>
                       <li><a class="dropdown-item have-more" href="safe-key-white.html">Safe key</a></li>
-                      <li><a class="dropdown-item have-more" href="https://onedrive.live.com/?id=root&cid=AB3B730DDA89DC97">Downloads</a></li>
+                      <li><a class="dropdown-item have-more" href="https://onedrive.live.com/?id=root&cid=AB3B730DDA89DC97" target="_blank">Downloads</a></li>
                     </ul>
                   </li>
                 </ul>
@@ -159,7 +159,7 @@
                 <br>
 
         <section class="section_first">
-                  <a href="../java script samples/index.html" class="get_one">Get started</a>
+                  <a href="../java script samples/index.html" class="get_one" target="_blank">Get started</a>
                   <a href="safe-key-white.html" class="get_one">Safety measures</a>
         </section>
 
@@ -235,7 +235,7 @@
     <br>
     <br>
     <a href="../java script samples/index.js" type="button" download="Java_script"  class="btn btn-outline-primary btn-lg bolder">Download</a>
-    <a href="../java script samples/index.html" type="button" class="btn btn-outline-primary btn-lg bolder">Take a view in browser</a>
+    <a href="../java script samples/index.html" type="button" class="btn btn-outline-primary btn-lg bolder" target="_blank">Take a view in browser</a>
   </p>
 
 </div>
